# chatbot_bikes

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bikes.py  docker-compose.yml  intents.py  llm.py  main.py  new.txt  pyproject.toml  requirements.txt  streamlit_app.py
.gitlab/: README.md
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: default.md
backend/: llm.py
docs/: README.md
scripts/: deploy.py  setup.py
tests/: __init__.py  conftest.py  test_bikes.py  test_intents.py  test_llm.py
